...
        </View>
        <ScrollView style={styles.scrollView}>
          {/* User Profile Section */}
          <List.Section>
            <List.Subheader
              style={[styles.subheader, {color: theme.colors.surface}]}>
              Profile
            </List.Subheader>
            {user.email && user.email !== user.installationId ? (
              <View style={styles.infoBox}>
                <View style={styles.infoRow}>
                  <List.Icon icon="account" color={theme.colors.surface} />
                  <View style={styles.infoContent}>
...
